--- a/package.json
+++ b/package.json
@@ -1,12 +1,32 @@
 {
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "tsc",
+    "build:dev": "tsc --watch",
+    "start": "node --enable-source-maps dist/Esercizio13.js",
+    "start:dev": "nodemon --watch dist/",
+    "dev": "npm run build && concurrently 'npm:build:dev' 'npm:start:dev'",
+    "test2": "cross-env NODE_OPTIONS=--experimental-vm-modules jest"
+  },
+  "engines": {
+    "node": ">=16"
   },
   "dependencies": {
-    "figlet": "^1.5.2"
+    "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
+    "figlet": "^1.5.2",
+    "nodemon": "^2.0.20"
   },
   "devDependencies": {
+    "@tsconfig/node16": "^1.0.3",
+    "@types/express": "^4.17.14",
+    "@types/jest": "^29.1.2",
+    "@types/node": "^18.8.2",
+    "@types/supertest": "^2.0.12",
+    "concurrently": "^7.4.0",
     "jest": "^29.1.2",
-    "supertest": "^6.3.0"
+    "supertest": "^6.3.0",
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.8.4"
   }
 }
