--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "node": ">=16"
   },
   "dependencies": {
+    "@prisma/client": "^4.4.0",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "figlet": "^1.5.2",
@@ -25,6 +26,7 @@
     "@types/supertest": "^2.0.12",
     "concurrently": "^7.4.0",
     "jest": "^29.1.2",
+    "prisma": "^4.4.0",
     "supertest": "^6.3.0",
     "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
